Log ITAG LT work change.

--- a/CV.htm
+++ b/CV.htm
@@ -106,7 +106,12 @@ write tests for 3-6 months)</li>
 
 	<h1>Experience</h1>
 
-	<h2>June 2021 – now (Senior Software Engineer at UAB &quot;EPAM SISTEMOS&quot; Lithuania)</h2>
+	<h2>December 2022 – now (Lead Software Engineer at UAB &quot;ITechArt Group LT&quot;)</h2>
+	<p><i>Project:</i> Deal Cloud, Net6-based fintech solution.</p>
+	<p><i>Responsibility:</i> bugfix, code refactoring, minor architucture tasks.</p>
+	<p><i>Tools and technologies:</i> MS Visual Studio 2022, GIT, Notepad++, Entity Framework.</li>
+
+	<h2>June 2021 – December 2022 (Senior Software Engineer at UAB &quot;EPAM SISTEMOS&quot; Lithuania)</h2>
 	<p><i>Projects (by customer company names):</i> thinkFolio (support huge legacy VB+C# finance solution made of BBOM), Woven (rewrite legacy MEF+VB+C# .NET Framework solution to .NET 6 with Kafka), Boden (support microservice solution with many legacy parts and partially broken CI/CD).</p>
 	<p><i>Responsibility:</i> bugfix, code refactoring, AWS + Terraform CI/CD-related activities.</p>
 	<p><i>Tools and technologies:</i> MS Visual Studio 2019-2022, GIT, Notepad++, AWS.</li>
