Complete ITAG experience.

--- a/CV.htm
+++ b/CV.htm
@@ -106,7 +106,12 @@ write tests for 3-6 months)</li>
 
 	<h1>Experience</h1>
 
-	<h2>December 2022 – now (Lead Software Engineer at UAB &quot;ITechArt Group LT&quot;)</h2>
+	<h2>April 2023 – now (Senior Software Engineer at ARAS Corp)</h2>
+	<p><i>Project:</i> ARAS Innovator PLM, again.</p>
+	<p><i>Responsibility:</i> implement new features and bugfix new ones, development only.</p>
+	<p><i>Tools and technologies:</i> ...</li>
+
+	<h2>December 2022 – March 2023 (Lead Software Engineer at UAB &quot;ITechArt Group LT&quot;)</h2>
 	<p><i>Project:</i> Deal Cloud, Net6-based fintech solution.</p>
 	<p><i>Responsibility:</i> bugfix, code refactoring, minor architucture tasks.</p>
 	<p><i>Tools and technologies:</i> MS Visual Studio 2022, GIT, Notepad++, Entity Framework.</li>
