Update photo alignment.

--- a/CV.htm
+++ b/CV.htm
@@ -1,13 +1,20 @@
 <html>
 	<head><title>CV Andrei Bychko 2022</title></head>
 <body align="justify">
-	<b>Andrei Bychko</b>
-	<br/>
-	<br/>
-	(<a href="https://www.linkedin.com/in/andrei-bychko-3b0575193/">LinkedIn profile</a>)
-	<br/>
-	<br/>
-	<img width="776" height="992" src="photo.png" />
+	<table>
+		<tr>
+			<td rowspan="9"><img width="199" height="248" src="photo.png" /></td>
+			<td>&nbsp;</td>
+		</tr>
+		<tr><td>&nbsp;</td></tr>
+		<tr><td>&nbsp;</td></tr>
+		<tr><td><b>Andrei Bychko</b></td></tr>
+		<tr><td>Senior/Lead Software Engineer</td></tr>
+		<tr><td>(<a href="https://www.linkedin.com/in/andrei-bychko-3b0575193/">LinkedIn profile</a>)</td></tr>
+		<tr><td>&nbsp;</td></tr>
+		<tr><td>&nbsp;</td></tr>
+		<tr><td>&nbsp;</td></tr>
+	</table>
 
 	<h1>Summary</h1>
 	<p><b>15+ years’ enterprise experience in software development using different programming languages (mostly C#/.NET and SQL).</b></p>
