--- a/CV.htm
+++ b/CV.htm
@@ -94,6 +94,7 @@ write tests for 3-6 months)</li>
 		<li>MS SQL Management Studio 2000 – 18</li>
 		<li>SVCs and Task tracking: <b>GIT</b>, SVN, <b>Atlassian JIRA</b>, Rational Clear Case+Clear Quest, Perforce, MyInnovator, Mantiss</li>
 		<li>Fiddler</li>
+		<li>Postman</li>
 		<li>TASM, FASM, Olly Debugger, Bochs</li>
 		<li>Borland Delphi 6, 7, 2008</li>
 	</ul>
