Add last achievents.

--- a/CV.htm
+++ b/CV.htm
@@ -199,6 +199,8 @@ write tests for 3-6 months)</li>
 		<li>Rewrote existing data synchronization solution, which then was used to develop and launch mars rover.</li>
 		<li>Developed customizable inner Workflow engine, based on Aras Innovator, and WorkflowCore package.</li>
 		<li>Created easy AI-based Semantic Network engine and AI data model editor for own purposes.</li>
+		<li>Accelerated x200 SQL stored procedure which indexed files for full-text search subsystem.</li>
+		<li>Accelerated x50 method which opens search panel for complicated full-text search configurations.</li>
 	</ul>
 
 	<h2>Visutech</h2>
